objects/Packlist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset_Tag__c</fullName>
        <formula>Cvent_Asset__r.Asset_Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Asset</label>
        <referenceTo>Cvent_Asset__c</referenceTo>
        <relationshipName>Picklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cvent_Box__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Box</label>
        <referenceTo>Cvent_Box__c</referenceTo>
        <relationshipLabel>Packlist Items</relationshipLabel>
        <relationshipName>Packlist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Actual_Return__c</fullName>
        <inlineHelpText>Auto-populated once the Asset is marked as Returned</inlineHelpText>
        <label>Date - Actual Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expected_Return__c</fullName>
        <label>Date - Expected Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipment__c</fullName>
        <label>Date - Shipment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Request_Item__c</fullName>
        <label>Onsite Hardware Request Item</label>
        <referenceTo>Onsite_Hardware_Request_Item__c</referenceTo>
        <relationshipLabel>Packlist Items</relationshipLabel>
        <relationshipName>Packlist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Validate_Asset_Types_Match__c</fullName>
        <formula>IF( Cvent_Asset__r.Cvent_Asset_Type__c ==  Onsite_Hardware_Request_Item__r.Cvent_Asset_Type__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks the Asset Type of the packed item against the requested Asset Type (from the Onsite Hardware Request Item)</inlineHelpText>
        <label>Validate: Asset Types Match</label>
        <type>Checkbox</type>
    </fields>
    <label>Packlist Item</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Packlist Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packlist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cvent_Asset__c</columns>
        <columns>Validate_Asset_Types_Match__c</columns>
        <columns>Date_Actual_Return__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>